--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="accordion"><h1>Terminologys</h1></div>
             <div class="panel">
                 <ol>
-                    <li>add</li>
+                    <li>config</li>
                     <li></li>
                     <li></li>
                     <li></li>
@@ -29,8 +29,7 @@
         <div class="accordion"><h1>Basic Commands</h1></div>
             <div class="panel">
                 <ol>
-                    <li></li>
-                    <li></li>
+                    <li>bore</li>
                     <li></li>
                     <li></li>
                     <li></li>
