Add git command in index

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="panel">
                 <ol>
                     <li>bore</li>
-                    <li></li>
+                    <li>iii</li>
                     <li></li>
                     <li></li>
                     <li></li>
