--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="panel">
                 <ol>
                     <li>config</li>
-                    <li></li>
+                    <li>git com</li>
                     <li></li>
                     <li></li>
                     <li></li>
