--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <li>config</li>
                     <li>git com</li>
                     <li>non fast-forward</li>
-                    <li></li>
-                    <li></li>
+                    <li>log</li>
+                    <li>help</li>
                     <li></li>
                     <li></li>
                     <li></li>
